# BingTranslationForPython

./: .gitignore  README.md  index.md  install_requires  package_uplaod_and_clean.py  setup.cfg  setup.conf  setup.py  test.md  try.py
bing_translation_for_python/: __init__.py  core.py  setting.py
bing_translation_for_python/public/: errors.py
demo/: demo1.py
ini/: conf.ini  language_code.ini
test/: config_test.py  core_test.py  error_test.py
zh-Hans/: index.md  supportedlanguages.md
zh-Hans/api/: Translator.md  config.md  index.md  semantic.md  text.md  translator.md
