[metadata]
name = bing-translation-for-python
author=87Keys
author_email=meme_me2019@outlook.com
description =Bing translation for python
long_description_content_type=text/markdown
long_description=file:README.md
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages=find:
python_requires = >=3.6
install_requires=
    requests
    tqdm
    bs4
